# tensorrt.collection

./: .gitignore  CMakeLists.txt  package.xml  readme.md
doc/: readme.md
include/: inference.h  net.h  resize.h  util.h
include/common/: buffers.h
module/: CMakeLists.txt  template.cpp
rexnet/: CMakeLists.txt  demo.cpp  eval.cpp
segmentation/: CMakeLists.txt  seg.cpp
src/: CMakeLists.txt  net.cpp  resize.cu  util.cpp
